# zecd

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.arm64  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  tparty.example.toml  zecd.example.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  regtest.yml  release.yml
book/: book.toml
book/src/: CNAME  SUMMARY.md  compatibility.md  configuration.md  introduction.md  limitations.md  migrating-from-zcashd.md  quickstart.md  testing.md
book/src/design/: architecture.md  privacy.md  reproducible-builds.md  statelessness.md  zebra-backend.md
book/src/guide/: addresses.md  deployment.md  operations.md  transparent.md  watch-only.md
book/src/rpc/: async-operations.md  blockchain.md  index.md  method-index.md  network.md  rawtx.md  sending.md  util-control.md  wallet-addresses.md  wallet-balances.md  wallet-history.md
book/src/security/: key-custody.md  threat-model.md
book/theme/: custom.css
deploy/: docker-compose.mainnet.yml  docker-compose.yml  lightwalletd-zcash.conf  lightwalletd-zcash.mainnet.conf  zebrad.mainnet.toml  zebrad.toml  zecd.mainnet.toml  zecd.toml
docs/: KEYSTORE.md  OPERATIONS.md  TPARTY.md
regtest-harness/: Cargo.toml  rust-toolchain.toml
regtest-harness/src/: lib.rs
regtest-harness/tests/: regtest_binding.rs  regtest_e2e.rs  regtest_failover.rs  regtest_funded.rs  regtest_hang.rs  regtest_ironwood.rs  regtest_multiwallet.rs  regtest_proving_cache.rs  regtest_reorg.rs  regtest_restore.rs  regtest_sapling.rs  regtest_stress_notes.rs  regtest_tparty.rs  regtest_transparent.rs  regtest_transparent_gap.rs  regtest_transparent_preexpose_responsive.rs  regtest_transparent_recovery_window.rs  regtest_transparent_sendmany_t2t.rs  regtest_transparent_t2t.rs  regtest_watchonly.rs  regtest_zebra.rs  regtest_zebra_direct.rs
scripts/: build-deb.sh  conformance.py  rpc_send_smoke.py  rpc_smoke.py
src/: address.rs  amount.rs  backend.rs  backoff.rs  config.rs  daemon.rs  error.rs  hardening.rs  health.rs  init.rs  keystore.rs  lib.rs  lightwalletd.rs  lock.rs  main.rs  metrics.rs  network.rs  operations.rs  pools.rs  rewrap.rs  socks.rs  state.rs
src/chain/: lwd.rs  mod.rs  zebra.rs
src/rpc/: blockchain.rs  control.rs  mod.rs  network.rs  rawtx.rs  signmessage.rs  tparty_methods.rs  util.rs  wallet_methods.rs
src/server/: auth.rs  jsonrpc.rs  mod.rs
src/sync/: engine.rs  mod.rs
src/wallet/: actor.rs  binding.rs  keys.rs  labels.rs  mod.rs  open.rs  read.rs  regtest_tests.rs  store.rs
tests/: cli.rs
