[package]
name = "zecd"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false
description = "A Bitcoin-Core-style JSON-RPC server for Orchard-only Zcash, built on librustzcash"

[[bin]]
name = "zecd"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP server (hyper's client side drives the zebra JSON-RPC backend)
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"

# Serialization. `arbitrary_precision` is REQUIRED: bitcoind emits amounts as JSON numbers
# with 8 decimals and clients parse them as Decimal; without this they round-trip through f64.
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# CLI / config / logging
clap = { version = "4.5", features = ["derive", "string", "env"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Auth. hmac+sha2 implement Bitcoin Core's salted `rpcauth` scheme (HMAC-SHA256).
base64 = "0.22"
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
# hash160 (= ripemd160(sha256)) for transparent-script address extraction in
# `getrawtransaction`; already in the tree via the zcash crates.
ripemd = "0.1"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
hex = "0.4"

# Seed handling
age = { version = "0.11", features = ["armor"] }
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
secrecy = "0.8"

# `prost` deserializes the compact-block / treestate / mempool protobuf types that
# `zcash_client_backend::proto` exposes and the zebra backend constructs (and that
# `sync/engine.rs` serializes to the on-disk block cache). `hyper-util`'s legacy client is the
# HTTP/1.1 client behind the zebra JSON-RPC backend.
prost = "0.14"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
rusqlite = { version = "0.37", features = ["time"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# Zcash - versions identical to zcash-devtool/Cargo.toml
orchard = { version = "0.14", default-features = false }
zcash_address = "0.12"
# `transparent-inputs` lets transparent receivers surface in getrawtransaction/getaddressinfo
# and the received-by-address read paths; zecd's own wallets never expose transparent receivers.
zcash_client_backend = { version = "0.23", features = ["orchard", "transparent-inputs"] }
zcash_client_sqlite = { version = "0.21", features = ["unstable", "orchard", "serde", "transparent-inputs"] }
zcash_keys = { version = "0.14", features = ["unstable", "orchard"] }
zcash_primitives = "0.28"
zcash_proofs = { version = "0.28", features = ["bundled-prover"] }
zcash_protocol = { version = "0.9", features = ["local-consensus"] }
zcash_transparent = "0.8"
# Script asm rendering + standard-script solver for `getrawtransaction` (already in the
# tree via zcash_transparent; same crate Zallet uses for this).
zcash_script = "0.4.5"
sapling = { package = "sapling-crypto", version = "0.7" }
zip32 = "0.2"
zip321 = "0.8"
libc = "0.2.186"
# Single-instance guard: an advisory exclusive lock on `<datadir>/.lock` so two zecd processes
# can't operate on the same data directory at once (mirrors zallet / zcashd). Linux only needs
# libc (already in-tree); windows-sys is pulled in transitively on Windows.
fmutex = "0.3"

# Optional drop-in allocator, enabled by both musl release images (`Dockerfile` and
# `Dockerfile.arm64`). musl's default `malloc-ng` contends under Orchard proving's multi-threaded
# (rayon) allocation churn - ~80x more futex syscalls than mimalloc - costing ~10% per shielded
# send on bare metal and several× in syscall-expensive sandboxes (gVisor/nested-virt/some CI);
# mimalloc restores parity in both. Native glibc builds (dev, tests) leave it off - glibc's own
# allocator already scales, so the dependency is pure overhead there.
mimalloc = { version = "0.1", optional = true }

[features]
# Use mimalloc as the global allocator. Off by default; the musl release images opt in.
mimalloc = ["dep:mimalloc"]
# Hardened mimalloc (MI_SECURE): guard pages, encrypted/canary free-lists, randomized
# allocation. The shipped musl images build with this - it costs <4% on the proving path
# (compute-bound, so allocator hardening barely registers) while restoring the heap-exploitation
# mitigations that swapping out musl's `malloc-ng` would otherwise drop. `mimalloc` (non-secure)
# remains available for anyone who wants the last few percent. See FINDINGS.md.
mimalloc-secure = ["mimalloc", "mimalloc/secure"]

[dev-dependencies]
tempfile = "3"
# Frontier bookkeeping for the fabricated-chain reorg test (matches librustzcash's version).
incrementalmerkletree = "0.8"

# The ONLY patched dependency (librustzcash etc. stay on released crates.io versions -
# see the project docs): a vendored i18n-embed-fl 0.9.4 with the deterministic-argument-order
# fix from kellpossible/cargo-i18n#151 backported, so `age`'s fl! macro expansions (and
# therefore the reproducible Docker builds) stop being a per-build coin flip. Remove
# when an `age` release depends on i18n-embed-fl 0.10+.
[patch.crates-io]
i18n-embed-fl = { path = "vendor/i18n-embed-fl" }
