[package]
name = "zecd"
version = "0.4.2"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false
description = "A Bitcoin-Core-style JSON-RPC server for Orchard-only Zcash, built on librustzcash"

[[bin]]
name = "zecd"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP server (hyper's client side drives the zebra JSON-RPC backend)
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"

# Serialization. `arbitrary_precision` is REQUIRED: bitcoind emits amounts as JSON numbers
# with 8 decimals and clients parse them as Decimal; without this they round-trip through f64.
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# CLI / config / logging
clap = { version = "4.5", features = ["derive", "string", "env"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Auth. hmac+sha2 implement Bitcoin Core's salted `rpcauth` scheme (HMAC-SHA256).
base64 = "0.22"
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
# hash160 (= ripemd160(sha256)) for transparent-script address extraction in
# `getrawtransaction`; already in the tree via the zcash crates.
ripemd = "0.1"
# `signmessage`/`verifymessage` sign the double-SHA256 message hash with the transparent
# address's secp256k1 key and recover the signer's pubkey. The `recovery` feature provides the
# recoverable-ECDSA API (compact 65-byte header+sig, as zcashd/zallet produce). Already in the
# tree via the zcash crates; matches zallet's pin.
secp256k1 = { version = "0.29", features = ["recovery"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
hex = "0.4"

# Seed handling
age = { version = "0.11", features = ["armor"] }
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
secrecy = "0.8"

# `prost` deserializes the compact-block / treestate / mempool protobuf types that
# `zcash_client_backend::proto` exposes and the zebra backend constructs (and that
# `sync/engine.rs` serializes to the on-disk block cache). `hyper-util`'s legacy client is the
# HTTP/1.1 client behind the zebra JSON-RPC backend.
prost = "0.14"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
rusqlite = { version = "0.37", features = ["time"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# Zcash - versions identical to zcash-devtool/Cargo.toml
# `circuit` exposes `orchard::circuit::{ProvingKey, VerifyingKey}` so we can build the Orchard
# proving key once at startup and reuse it for every send (the PCZT prove path), instead of
# librustzcash's fused builder which rebuilds it per transaction.
orchard = { version = "=0.15.0-pre.2", default-features = false, features = ["circuit"] }
zcash_address = "0.13.0-pre.0"
# `CompactSize` builds the length-prefixed preimage for the `signmessage`/`verifymessage`
# message hash (magic + message, each CompactSize-prefixed, double-SHA256), byte-identical to
# zcashd's `rpc/misc.cpp` and zallet. Pinned to the librustzcash rev in `[patch]` (0.4.0 there).
zcash_encoding = "0.4"
# `transparent-inputs` lets transparent receivers surface in getrawtransaction/getaddressinfo
# and the received-by-address read paths; zecd's own wallets never expose transparent receivers.
# `pczt` exposes `create_pczt_from_proposal` / `extract_and_store_transaction_from_pczt`, the
# build/prove/store seam that lets the proving step take a cached Orchard proving key.
zcash_client_backend = { version = "0.23", features = ["orchard", "transparent-inputs", "pczt"] }
zcash_client_sqlite = { version = "0.21", features = ["unstable", "orchard", "serde", "transparent-inputs"] }
zcash_keys = { version = "0.15.0-pre.0", features = ["unstable", "orchard"] }
zcash_primitives = "0.29.0-pre.0"
zcash_proofs = { version = "0.29.0-pre.0", features = ["bundled-prover"] }
zcash_protocol = { version = "0.10.0-pre.0", features = ["local-consensus"] }
zcash_transparent = "0.9.0-pre.0"
# Script asm rendering + standard-script solver for `getrawtransaction` (already in the
# tree via zcash_transparent; same crate Zallet uses for this).
zcash_script = "0.4.5"
sapling = { package = "sapling-crypto", version = "0.7" }
# PCZT roles (Prover/Signer) for the cached-proving-key send path. Versions track the
# zcash_client_backend `pczt` feature's own pin (0.7).
pczt = { version = "0.7", default-features = false, features = ["prover", "signer", "orchard", "sapling"] }
zip32 = "0.2"
zip321 = "0.8"
libc = "0.2.186"
# Single-instance guard: an advisory exclusive lock on `<datadir>/.lock` so two zecd processes
# can't operate on the same data directory at once (mirrors zallet / zcashd). Linux only needs
# libc (already in-tree); windows-sys is pulled in transitively on Windows.
fmutex = "0.3"

# Optional drop-in allocator, enabled by both musl release images (`Dockerfile` and
# `Dockerfile.arm64`). musl's default `malloc-ng` contends under Orchard proving's multi-threaded
# (rayon) allocation churn - ~80x more futex syscalls than mimalloc - costing ~10% per shielded
# send on bare metal and several× in syscall-expensive sandboxes (gVisor/nested-virt/some CI);
# mimalloc restores parity in both. Native glibc builds (dev, tests) leave it off - glibc's own
# allocator already scales, so the dependency is pure overhead there.
mimalloc = { version = "0.1", optional = true }

[features]
# Use mimalloc as the global allocator. Off by default; the musl release images opt in.
mimalloc = ["dep:mimalloc"]
# Hardened mimalloc (MI_SECURE): guard pages, encrypted/canary free-lists, randomized
# allocation. The shipped musl images build with this - it costs <4% on the proving path
# (compute-bound, so allocator hardening barely registers) while restoring the heap-exploitation
# mitigations that swapping out musl's `malloc-ng` would otherwise drop. `mimalloc` (non-secure)
# remains available for anyone who wants the last few percent. See FINDINGS.md.
mimalloc-secure = ["mimalloc", "mimalloc/secure"]
# NB: Ironwood (NU6.3 / V6) is **no longer a cargo feature** - it is compiled unconditionally (this
# RC branch pins the ironwood librustzcash line, which exposes the ironwood APIs unconditionally).
# Activation is purely consensus-height driven via `is_nu_active(NetworkUpgrade::Nu6_3, ...)`: OFF on
# mainnet (protocol has no NU6.3 height), ON on testnet at height 4_134_000, and opt-in on regtest
# via the `ZECD_REGTEST_NU63_HEIGHT` env var (the ironwood harness sets it to 8; the standard harness
# leaves it unset). So ironwood is "always built, testnet-on, mainnet-off" with no build flag. This
# is an RC posture - the real release will pin published crates.io librustzcash instead of the git rev.

[dev-dependencies]
tempfile = "3"
# Frontier bookkeeping for the fabricated-chain reorg test (matches librustzcash's version).
incrementalmerkletree = "0.8"

# Patched dependencies.
#
# 1. i18n-embed-fl: a vendored 0.9.4 with the deterministic-argument-order fix from
#    kellpossible/cargo-i18n#151 backported, so `age`'s fl! macro expansions (and therefore the
#    reproducible Docker builds) stop being a per-build coin flip. Remove when an `age` release
#    depends on i18n-embed-fl 0.10+.
#
# 2. librustzcash -> the OFFICIAL zcash/librustzcash repo (replacing the old valargroup fork). The
#    ironwood / NU6.3 leaf crates are published to crates.io as release candidates
#    (`zcash_primitives 0.29.0-pre.0`, `orchard 0.15.0-pre.2`, `zcash_protocol 0.10.0-pre.0`,
#    `zcash_keys 0.15.0-pre.0`, `zcash_address 0.13.0-pre.0`, `zcash_transparent 0.9.0-pre.0`,
#    `zcash_proofs 0.29.0-pre.0`), so `orchard` comes straight from crates.io (no git patch). But
#    the wallet crates zecd leans on (`zcash_client_backend`/`zcash_client_sqlite`) and their
#    siblings (`pczt`/`zip321`/`zcash_encoding`) are NOT yet published with the ironwood changes.
#    `main` itself still has the wallet-side ironwood work unfinished (`client_sqlite` has
#    `ShieldedPool::Ironwood => todo!(...)`), so we track upstream's **`dw/ironwood-scan-model`**
#    line (zcash/librustzcash#2539), the same ironwood line the confirmed-working reference wallet
#    **zcash-devtool** (`ironwood-valar`) builds against. To avoid depending on a contributor's fork
#    staying current, zecd pins **our own fork branch - `zecrocks/librustzcash` `ironwood-scan-model`**
#    - which is the current upstream `dw/ironwood-scan-model` HEAD **plus one cherry-pick of a commit it
#    still lacks**: "Backfill received-note memos for own self-sends" - a `zcash_client_sqlite`
#    `put_blocks` pass that re-decrypts the wallet's own mined txs and fills a received note's NULL
#    memo. Needed because a shielded payment to one's own address is a `Recipient::External` (no
#    received note at send time), the block scanner later creates the note with a NULL memo (compact
#    outputs carry none), and the enhancement step that would backfill it is skipped for the wallet's
#    own txs (their raw bytes are pre-stored -> classified Status-only). **This bites Ironwood hardest,
#    where every write is a self-send** - so without it, a memo on an Ironwood *send* is silently lost.
#    To maintain the branch: rebase this cherry-pick onto the latest upstream `dw/ironwood-scan-model`,
#    push, bump the rev below; **drop it and repin straight to upstream once the self-send memo fix
#    merges.** Two earlier cherry-picks were retired at this rebase: the `ironwood_tree_retained_checkpoints`
#    table (librustzcash#2554) is now upstream, and the create_pczt Ironwood-build (librustzcash#2543)
#    is intentionally NOT carried - upstream `create_pczt_from_proposal` still rejects Ironwood PCZTs
#    (`step_uses_ironwood`), so zecd routes **Ironwood sends through the fused `create_proposed_transactions`
#    path** (which upstream fully supports), via the `ironwood_forces_fused` gate in `actor.rs`. That
#    trades the cached proving key for ~4.5 s/send keygen on Ironwood sends; drop the gate to reclaim
#    the PCZT path once upstream removes its `step_uses_ironwood` guard.
#    The upstream line carries the rest of the ironwood API zecd uses: ironwood receive **memos**
#    (`decrypt_transaction` decrypts the Ironwood bundle), `ironwood_balance`, `Note::pool()`, the
#    ironwood `ChainState`, and (for the fused send path) native Ironwood build+prove. NB the branch
#    pins **orchard `0.15.0-pre.2`** and needs the explicit-checkpoint-retention **shardtree** APIs plus
#    a `clear_flags` checkpoint-pruning panic fix, so shardtree + incrementalmerkletree are git-patched
#    below to **our own fork `zecrocks/incrementalmerkletree`** (upstream `decefc46` + that fix).
#
#    This rev **includes `00c789f9`** ("Select shielded inputs from a single pool group"): shielded
#    inputs are selected from one of two mutually-exclusive groups - {Orchard} or {Sapling+Ironwood},
#    never mixed - the NU6.3 migration model (past NU6.3 a new Orchard-address output becomes an
#    ironwood V3 note, so Orchard V2 is a legacy drain-only pool). It is applied *unconditionally*
#    (pre-NU6.3 too), so zecd's default (NU6.2) build no longer combines Sapling+Orchard inputs in one
#    transaction; the `regtest_sapling` e2e was updated to the turnstile model to match (fund Orchard
#    2 ZEC / Sapling 1 ZEC; a 1.5-ZEC payment to the Sapling receiver draws the Orchard group and
#    produces an Orchard->Sapling turnstile). We accept this to stay lock-step with devtool/upstream.
#    A `[patch]` git-workspace must be all-or-nothing (a git crate's path-siblings would otherwise
#    conflict with the same crates.io versions), so the whole librustzcash set is pinned to this one
#    rev. `[patch]` is global (cargo can't feature-gate it), but upstream exposes the ironwood types
#    unconditionally (no `cfg(zcash_unstable = "nu6.3")` gating remains upstream), and NU6.3 stays
#    inactive without the `ironwood` cargo feature, so the default build is released-equivalent.
#    Pinned by **git rev** (not a sibling path) so CI - which has no sibling checkout - can fetch it.
#
#    Ironwood model at this rev (matches devtool, differs from the old valar fork): ironwood notes are
#    **Orchard V3 notes** - same key tree, same key derivation, scanned by the existing Orchard path,
#    stored in `ironwood_received_notes` and surfaced in `v_received_outputs` with pool code 4;
#    balances roll up via `AccountBalance::ironwood_balance()`. **Sends**: the proposal auto-routes
#    Orchard payment/change into the ironwood bundle past NU6.3, and the prover adds an ironwood proof
#    step (`requires_ironwood_proof`/`create_ironwood_proof`) using a `PostNu6_3` proving key (see
#    `actor.rs`; mirrors devtool's `pczt/prove.rs`). Bump this rev (and the crates.io `-pre` version
#    reqs above) as the upstream branch advances. NOT threaded into the Docker/release pipeline
#    (intentionally - would ship unreleased WIP into reproducible images).
[patch.crates-io]
i18n-embed-fl = { path = "vendor/i18n-embed-fl" }
# equihash + f4jumble are leaf crates in the librustzcash workspace that the patched crates depend
# on; patch them to the same rev so a git-workspace sibling can't clash with a crates.io copy (matches
# zcash-devtool's ironwood-valar patch set).
equihash = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
f4jumble = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_address = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_encoding = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_protocol = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zip321 = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
pczt = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_keys = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_client_backend = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_client_sqlite = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_primitives = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_proofs = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
zcash_transparent = { git = "https://github.com/zecrocks/librustzcash", rev = "71da9dddc194f8adf003b14c7957d03a4836c3cd" }
# The ironwood librustzcash line requires the explicit-checkpoint-retention shardtree APIs
# (`ensure_retained`/`retained_checkpoints`/`remove_retained_checkpoint`) plus the `clear_flags`
# checkpoint-pruning panic fix, neither of which is in a published shardtree yet. Upstream
# `zcash/incrementalmerkletree` **main** now carries both (the panic fix landed upstream - no longer
# needs our `zecrocks/incrementalmerkletree` fork), so pin both crates to upstream main by git rev.
# Mirror this exact rev on both crates. Drop once a shardtree release carrying these APIs and the fix
# is cut.
shardtree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "7b23adb67044d2a9f4a68759f1e6340c3fc4735a" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "7b23adb67044d2a9f4a68759f1e6340c3fc4735a" }
