[package]
name = "zecd"
version = "0.5.0-rc3"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = true
description = "A Bitcoin-Core-style JSON-RPC server for Orchard-only Zcash, built on librustzcash"
repository = "https://github.com/zecrocks/zecd"
homepage = "https://zecd.org"

[[bin]]
name = "zecd"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP server (hyper's client side drives the zebra JSON-RPC backend)
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"

# Serialization. `arbitrary_precision` is REQUIRED: bitcoind emits amounts as JSON numbers
# with 8 decimals and clients parse them as Decimal; without this they round-trip through f64.
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# CLI / config / logging
clap = { version = "4.5", features = ["derive", "string", "env"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Auth. hmac+sha2 implement Bitcoin Core's salted `rpcauth` scheme (HMAC-SHA256).
base64 = "0.22"
subtle = "2"
hmac = "0.12"
sha2 = "0.10"
# hash160 (= ripemd160(sha256)) for transparent-script address extraction in
# `getrawtransaction`; already in the tree via the zcash crates.
ripemd = "0.1"
# `signmessage`/`verifymessage` sign the double-SHA256 message hash with the transparent
# address's secp256k1 key and recover the signer's pubkey. The `recovery` feature provides the
# recoverable-ECDSA API (compact 65-byte header+sig, as zcashd/zallet produce). Already in the
# tree via the zcash crates; matches zallet's pin.
secp256k1 = { version = "0.29", features = ["recovery"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
hex = "0.4"

# Seed handling
age = { version = "0.11", features = ["armor"] }
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
secrecy = "0.8"

# `prost` deserializes the compact-block / treestate / mempool protobuf types that
# `zcash_client_backend::proto` exposes and the zebra backend constructs (and that
# `sync/engine.rs` serializes to the on-disk block cache). `hyper-util`'s legacy client is the
# HTTP/1.1 client behind the zebra JSON-RPC backend.
prost = "0.14"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
rusqlite = { version = "0.37", features = ["time"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# Zcash - versions identical to zcash-devtool/Cargo.toml
# `circuit` exposes `orchard::circuit::{ProvingKey, VerifyingKey}` so we can build the Orchard
# proving key once at startup and reuse it for every send (the PCZT prove path), instead of
# librustzcash's fused builder which rebuilds it per transaction.
orchard = { version = "0.15", default-features = false, features = ["circuit"] }
zcash_address = "0.13"
# `CompactSize` builds the length-prefixed preimage for the `signmessage`/`verifymessage`
# message hash (magic + message, each CompactSize-prefixed, double-SHA256), byte-identical to
# zcashd's `rpc/misc.cpp` and zallet.
zcash_encoding = "0.4"
# `transparent-inputs` lets transparent receivers surface in getrawtransaction/getaddressinfo
# and the received-by-address read paths; zecd's own wallets never expose transparent receivers.
# `pczt` exposes `create_pczt_from_proposal` / `extract_and_store_transaction_from_pczt`, the
# build/prove/store seam that lets the proving step take a cached Orchard proving key.
zcash_client_backend = { version = "0.24.0-rc.1", features = ["orchard", "transparent-inputs", "pczt"] }
zcash_client_sqlite = { version = "0.22.0-rc.1", features = ["unstable", "orchard", "serde", "transparent-inputs"] }
zcash_keys = { version = "0.15", features = ["unstable", "orchard"] }
zcash_primitives = "0.29"
zcash_proofs = { version = "0.29", features = ["bundled-prover"] }
zcash_protocol = { version = "0.10", features = ["local-consensus"] }
zcash_transparent = "0.9"
# Script asm rendering + standard-script solver for `getrawtransaction` (already in the
# tree via zcash_transparent; same crate Zallet uses for this).
zcash_script = "0.4.5"
sapling = { package = "sapling-crypto", version = "0.7" }
# PCZT roles (Prover/Signer) for the cached-proving-key send path. Versions track the
# zcash_client_backend `pczt` feature's own pin (0.8.0-rc.1).
pczt = { version = "0.8.0-rc.1", default-features = false, features = ["prover", "signer", "orchard", "sapling"] }
zip32 = "0.2"
zip321 = "0.9.0-rc.1"
libc = "0.2.186"
# Single-instance guard: an advisory exclusive lock on `<datadir>/.lock` so two zecd processes
# can't operate on the same data directory at once (mirrors zallet / zcashd). Linux only needs
# libc (already in-tree); windows-sys is pulled in transitively on Windows.
fmutex = "0.3"

# Optional drop-in allocator, enabled by both musl release images (`Dockerfile` and
# `Dockerfile.arm64`). musl's default `malloc-ng` contends under Orchard proving's multi-threaded
# (rayon) allocation churn - ~80x more futex syscalls than mimalloc - costing ~10% per shielded
# send on bare metal and several× in syscall-expensive sandboxes (gVisor/nested-virt/some CI);
# mimalloc restores parity in both. Native glibc builds (dev, tests) leave it off - glibc's own
# allocator already scales, so the dependency is pure overhead there.
mimalloc = { version = "0.1", optional = true }

[features]
# Use mimalloc as the global allocator. Off by default; the musl release images opt in.
mimalloc = ["dep:mimalloc"]
# Hardened mimalloc (MI_SECURE): guard pages, encrypted/canary free-lists, randomized
# allocation. The shipped musl images build with this - it costs <4% on the proving path
# (compute-bound, so allocator hardening barely registers) while restoring the heap-exploitation
# mitigations that swapping out musl's `malloc-ng` would otherwise drop. `mimalloc` (non-secure)
# remains available for anyone who wants the last few percent. See FINDINGS.md.
mimalloc-secure = ["mimalloc", "mimalloc/secure"]
# NB: Ironwood (NU6.3 / V6) is **no longer a cargo feature** - it is compiled unconditionally (the
# published ironwood librustzcash line exposes the ironwood APIs unconditionally).
# Activation is purely consensus-height driven via `is_nu_active(NetworkUpgrade::Nu6_3, ...)`: OFF on
# mainnet (protocol has no NU6.3 height), ON on testnet at height 4_134_000, and opt-in on regtest
# via the `ZECD_REGTEST_NU63_HEIGHT` env var (the ironwood harness sets it to 8; the standard harness
# leaves it unset). So ironwood is "always built, testnet-on, mainnet-off" with no build flag. The
# wallet crates are pinned to crates.io **release candidates** (see the version reqs above); move to
# the finals when they publish.

[dev-dependencies]
tempfile = "3"
# Frontier bookkeeping for the fabricated-chain reorg test (matches librustzcash's version).
incrementalmerkletree = "0.8"

# Dependency notes.
#
# The ironwood / NU6.3 librustzcash line is now consumed **straight from crates.io** - the leaf
# crates as finals (`zcash_primitives`/`zcash_proofs 0.29.0`, `orchard 0.15.0`, `zcash_protocol
# 0.10.0`, `zcash_keys 0.15.0`, `zcash_address 0.13.0`, `zcash_transparent 0.9.0`) and the wallet
# crates as release candidates (`zcash_client_backend 0.24.0-rc.1`, `zcash_client_sqlite
# 0.22.0-rc.1`, `pczt 0.8.0-rc.1`, `zip321 0.9.0-rc.1`), published 2026-07-12. This replaced the
# previous all-or-nothing `[patch.crates-io]` git pin of the whole librustzcash workspace to the
# `dw/ironwood-scan-model` rev `1105d8203` (zcash/librustzcash#2539), which existed only because the
# wallet crates had no ironwood release yet. The shardtree/incrementalmerkletree git pins went with
# it: this line depends on published `shardtree 0.7` / `incrementalmerkletree 0.8.2`, which carry the
# explicit-checkpoint-retention APIs and the `clear_flags` checkpoint-pruning panic fix the old pins
# existed for. Zecd carries **no librustzcash fork and no git pins** - move the RC reqs to the finals
# when they publish.
#
# Still-relevant notes inherited from the git-pin era (they describe the published line too):
#
# - **Self-send memo backfill is NOT in this line.** A cherry-pick (submitted upstream separately)
#   filled a received note's NULL memo for the wallet's *own* mined self-sends via a `put_blocks`
#   re-decryption pass. The gap is narrow and self-healing (the live mempool path fills the memo on
#   the authoring node; a from-seed restore recovers it via enhancement) - it only bites the
#   authoring node when the mempool missed its own self-send, and a rescan fixes it. Re-check when
#   bumping to the next RC/final.
# - **Ironwood sends route through the fused `create_proposed_transactions` path** via the
#   `ironwood_forces_fused` gate in `actor.rs` (~4.5 s/send keygen). NB the published RC now BUILDS
#   Ironwood PCZTs (librustzcash#2543 landed - the old git rev rejected them), so the gate is a
#   conservative choice, not an upstream constraint; drop it (and reclaim the PCZT proving-key cache)
#   once the cached path is validated against an NU6.3-active chain.
# - **Single-pool-group input selection** (upstream `00c789f9`): shielded inputs come from one of
#   two mutually-exclusive groups - {Orchard} or {Sapling+Ironwood}, never mixed - the NU6.3
#   migration model (past NU6.3 a new Orchard-address output becomes an ironwood V3 note, so Orchard
#   V2 is a legacy drain-only pool). Applied *unconditionally* (pre-NU6.3 too), so the default
#   (NU6.2) build no longer combines Sapling+Orchard inputs in one transaction; the `regtest_sapling`
#   e2e was updated to the turnstile model to match.
# - **Ironwood model** (matches devtool): ironwood notes are **Orchard V3 notes** - same key tree,
#   same key derivation, scanned by the existing Orchard path, stored in `ironwood_received_notes`
#   and surfaced in `v_received_outputs` with pool code 4; balances roll up via
#   `AccountBalance::ironwood_balance()`. **Sends**: the proposal auto-routes Orchard payment/change
#   into the ironwood bundle past NU6.3, and the prover adds an ironwood proof step
#   (`requires_ironwood_proof`/`create_ironwood_proof`) using a `PostNu6_3` proving key (see
#   `actor.rs`; mirrors devtool's `pczt/prove.rs`).
#
# The only remaining patch: i18n-embed-fl, a vendored 0.9.4 with the deterministic-argument-order
# fix from kellpossible/cargo-i18n#151 backported, so `age`'s fl! macro expansions (and therefore the
# reproducible Docker builds) stop being a per-build coin flip. Remove when an `age` release depends
# on i18n-embed-fl 0.10+.
[patch.crates-io]
i18n-embed-fl = { path = "vendor/i18n-embed-fl" }
