[package]
name = "zecd-regtest-harness"
version = "0.0.0"
edition = "2021"
publish = false
description = "End-to-end regtest integration harness for zecd (zebra + lightwalletd, Zcash-Foundation-standard)"

# Standalone workspace on purpose: this crate pulls in zebra's crates (zebra-rpc/zebra-chain and
# their tree). Declaring its own [workspace] keeps that fully isolated from zecd's hard-pinned
# librustzcash lockfile - `cargo build` in the parent never sees these deps.
[workspace]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "net"] }
# Plaintext HTTP only (zecd + zebra RPC are local http://) - no TLS stack pulled in.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
hex = "0.4"

# Zcash-Foundation regtest stack. We mine the way zebra's own regtest tests do - `getblocktemplate`
# → `proposal_block_from_template` → `submitblock` (no PoW on Regtest) - instead of depending on
# zingo-infra/zcash_local_net. Pinned to the tag matching the zebrad binary CI runs (zfnd/zebra
# image); keep these in lockstep with the image tag in .github/workflows/regtest.yml. A committed
# Cargo.lock pins the rest of the tree; build with --locked.
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra", tag = "v5.0.0" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra", tag = "v5.0.0" }
