[package]
name = "zecd-regtest-harness"
version = "0.0.0"
edition = "2021"
publish = false
description = "End-to-end regtest integration harness for zecd (zebra + lightwalletd, Zcash-Foundation-standard)"

# Standalone workspace on purpose: keeps the harness's e2e-only dependency tree (reqwest etc.)
# fully isolated from zecd's hard-pinned librustzcash lockfile - `cargo build` in the parent
# never sees these deps. A committed Cargo.lock pins the tree; build with --locked.
#
# Note there is NO zebra crate dependency: blocks are mined via zebrad's Regtest-only `generate`
# RPC (zebra ≥ 2.0.0), so the harness is a pure black-box JSON-RPC driver and works against any
# zebrad release - no tag↔image lockstep to maintain.
[workspace]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "net"] }
# Plaintext HTTP only (zecd + zebra RPC are local http://) - no TLS stack pulled in.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
